# hybridagents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agents/: __init__.py
agents/core/: __init__.py  agent_registry.py  deterministic_agent.py  llm.py  loop.py  memory.py  repl.py  runtime.py  tool_registry.py
agents/core/orchestration/: __init__.py  _common.py  auction.py  blackboard.py  concurrent.py  debate.py  group_chat.py  handoff.py  hierarchical.py  iterative_refinement.py  magentic.py  map_reduce.py  reflection.py  router.py  sequential.py  supervisor.py  voting.py
agents/core/providers/: __init__.py  aifoundry_provider.py  base.py  ghcopilot_provider.py  ollama_provider.py
agents/privacy/: __init__.py  __main__.py  config.py  models.py  pipeline.py
agents/privacy/filters/: __init__.py  base.py  credential_filter.py  email_filter.py  iban_filter.py  llm_filter.py  money_filter.py  phone_filter.py  regex_filter.py  (+1 more)
agents/tools/: __init__.py  calculator_tool.py  file_tool.py  privacy_tool.py  search_tool.py
examples/: README.md
examples/01_simple_chat/: README.md  run.py
examples/02_research_team/: README.md  run.py
examples/03_privacy_demo/: README.md  run.py
examples/04_orchestration_patterns/: README.md  run.py
examples/05_custom_tools/: README.md  run.py  tools.py
examples/06_deterministic/: README.md  run.py
examples/07_multi_runtime/: README.md  run.py
examples/08_memory_isolation/: README.md  run.py
hybridagents/: __init__.py  config.py
hybridagents/core/: agent.py  agent_context.py  agent_registry.py  deterministic_agent.py  llm.py  loop.py  memory.py  repl.py  results.py  runtime.py  tool_registry.py
hybridagents/privacy/: __init__.py  __main__.py  config.py  pipeline.py  vault.py
hybridagents/tools/: __init__.py  calculator_tool.py  file_tool.py  privacy_tool.py  search_tool.py
(+31 files in other folders)
