[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "1.0.0"
description = "Modular agentic framework - hybrid LLM (Ollama + Azure AI Foundry + GitHub Copilot) with privacy filters"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "openai>=1.30.0",
    "github-copilot-sdk",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["agents*"]
exclude = ["examples*", "tests*"]
